--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "paths": {
       "~/*": ["./src/*"]
     },
+    "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
     "target": "ESNext"
