--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "build": "tsc && tsc-alias",
-    "dev": "tsx --watch-path src src/index.ts",
+    "dev": "chokidar 'src/**/*.ts' -c 'tsc && tsc-alias'",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "tsc": "tsc -noEmit"
@@ -15,12 +15,12 @@
   "devDependencies": {
     "@eslint/js": "~9.27",
     "@types/node": "^22",
+    "chokidar-cli": "~3.0",
     "eslint": "~9.27",
     "eslint-config-prettier": "~10.1",
     "eslint-plugin-prettier": "~5.4",
     "prettier": "~3.5",
     "tsc-alias": "~1.8",
-    "tsx": "~4.19",
     "typescript": "~5.8",
     "typescript-eslint": "~8.33"
   },
