--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "~1.12",
+    "winston": "~3.17",
     "zod": "~3.25"
   },
   "devDependencies": {
