--- a/package.json
+++ b/package.json
@@ -2,26 +2,27 @@
   "name": "@srigi/mcp-google-images-search",
   "description": "MCP server for searching images with Google",
   "license": "MIT",
-  "version": "0.1.2",
+  "version": "0.1.3-rc.1",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/srigi/mcp-google-images-search.git"
   },
   "bin": {
-    "mcp-google-images-search": "dist/mcp.js"
+    "mcp-google-images-search": "dist/cli.js"
   },
   "files": [
-    "dist/mcp.js",
+    "dist/cli.js",
+    "logs",
     "src"
   ],
   "scripts": {
-    "build": "ncc build src/index.ts --minify --out dist/ && echo '#!/usr/bin/env node' | cat - dist/index.js > dist/mcp.js && chmod +x dist/mcp.js",
+    "build": "ncc build src/index.ts --minify --out dist/ && echo '#!/usr/bin/env node' | cat - dist/index.js > dist/cli.js && chmod +x dist/cli.js",
     "dev": "chokidar 'src/**/*.ts' -c 'tsc && tsc-alias'",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "tsc": "tsc -noEmit",
     "test": "vitest run",
-    "start": "node dist/index.js"
+    "start": "node dist/cli.js"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "~1.13",
