--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@srigi/mcp-google-images-search",
   "description": "MCP server for searching images with Google",
   "license": "MIT",
-  "version": "0.1.3-rc.1",
+  "version": "0.1.3",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/srigi/mcp-google-images-search.git"
