--- a/package.json
+++ b/package.json
@@ -3,10 +3,21 @@
   "description": "MCP server for searching images with Google",
   "license": "MIT",
   "version": "0.1.3",
+  "bugs": {
+    "url": "https://github.com/srigi/mcp-google-images-search/issues"
+  },
+  "homepage": "https://github.com/srigi/mcp-google-images-search#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/srigi/mcp-google-images-search.git"
   },
+  "keywords": [
+    "google",
+    "image",
+    "modelcontextprotocol",
+    "mcp",
+    "search"
+  ],
   "bin": {
     "mcp-google-images-search": "dist/cli.js"
   },
